# authsysteminsolution

./: .gitignore  FERTIG.md  README.md  SETUP-OHNE-DOCKER.md  STATUS.md  docker-compose.yml
backend/: .env.example  package.json  tsconfig.build.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/auth/dto/: auth.dto.ts
backend/src/auth/strategies/: jwt.strategy.ts
backend/src/crypto/: crypto.service.ts
backend/src/licensing/: licensing.module.ts  licensing.service.ts
backend/src/loader/: loader.controller.ts  loader.module.ts  loader.service.ts
backend/src/loader/dto/: loader.dto.ts
backend/src/permissions/: permissions.module.ts
backend/src/permissions/guards/: roles.guard.ts
backend/src/prisma/: prisma.service.ts
backend/src/redis/: redis.service.ts
backend/src/security/: security.module.ts
backend/src/security/middleware/: rate-limit.middleware.ts
cpp-loader/: CMakeLists.txt  README.md
cpp-loader/examples/: example_usage.cpp
cpp-loader/include/: auth_client.h  protection.h
docs/: DEPLOYMENT.md
frontend/: .gitignore  README.md  next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
